mdapipkg/objects/Period_Prediction__c/fields/Predicted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_End_Date__c</fullName>
    <label>Predicted End Date</label>
    <type>Date</type>
</CustomField>