mdapipkg/objects/Period_Prediction__c/fields/Predicted_Period_Length__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Period_Length__c</fullName>
    <label>Predicted Period Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>