mdapipkg/objects/Period_Prediction__c/fields/Predicted_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Start_Date__c</fullName>
    <label>Predicted Start Date</label>
    <type>Date</type>
</CustomField>